# trabalho-poo-ed-2

./: trabalho.md
jogo/: CMakeLists.txt  main.cpp
jogo/headers/: atributos.hpp  entidade.hpp  fabrica_inimigos.hpp  inimigo.hpp  inimigo_pixel.hpp  jogo.hpp  magia.hpp  mago.hpp  mago_pixel.hpp  mapa.hpp  menu.hpp  personagem.hpp  personagem_pixel.hpp  posicao.hpp  skilltree.hpp
jogo/headers/magias/: magias_agua.hpp  magias_ar.hpp  magias_fogo.hpp  magias_terra.hpp
jogo/headers/magos/: mago_agua.hpp  mago_ar.hpp  mago_fogo.hpp  mago_terra.hpp
jogo/src/: atributos.cpp  entidade.cpp  fabrica_inimigos.cpp  inimigo.cpp  inimigo_pixel.cpp  jogo.cpp  magia.cpp  mago.cpp  mago_pixel.cpp  mapa.cpp  personagem.cpp  personagem_pixel.cpp  posicao.cpp  skilltree.cpp
jogo/src/magias/: magias_agua.cpp  magias_ar.cpp  magias_fogo.cpp  magias_terra.cpp
jogo/src/magos/: mago_agua.cpp  mago_ar.cpp  mago_fogo.cpp  mago_terra.cpp
